MAIL/POSTFIX-ADMIN/sqpostfixadmin100/templates/postfixadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postfixadmin
  namespace: mail-srv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postfixadmin
  template:
    metadata:
      labels:
        app: postfixadmin
    spec:
      containers:
        - name: postfixadmin
          image: postfixadmin:fpm-alpine
          ports:
            - name: postfixadmin
              containerPort: 8080
              protocol: TCP
