MAIL/POSTFIX-ADMIN/sqpostfixadmin100/templates/postfixadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postfixadmin-service
  namespace: mail-srv
  labels:
    app: postfixadmin
spec:
  type: ClusterIP
  selector:
    app: postfixadmin
  ports:
     - port: 80
       targetPort: http
       protocol: TCP
       name: http
