MAIL/POSTFIX-ADMIN/sqpostfixadmin100/templates/postfixadmin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postfixadmin-ingress
  namespace: mail-srv 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/router.entrypoints: websecure
    nginx.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer  # Usando el Issuer para Let's Encrypt
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
           more_set_headers 'Access-Control-Allow-Origin' '*';
           more_set_headers 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
           more_set_headers 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
           more_set_headers 'Access-Control-Max-Age' 1728000;
           more_set_headers 'Content-Type' 'text/plain; charset=utf-8';
           more_set_headers 'Content-Length' 0;
           return 204;
spec:
  ingressClassName: nginx
  rules:
    - host: postfixadmin.smartquail.io 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: postfixadmin-service
                port:
                  number: 80 
  tls:
    - secretName: postfixadmin-cert
      hosts:
        - postfixadmin.smartquail.io
